--- a/src/components/common/Discover/index.astro
+++ b/src/components/common/Discover/index.astro
@@ -20,32 +20,32 @@ const { title, images } = Astro.props;
 const instagramPosts = [
   {
     id: 'post1',
-    postUrl: 'https://www.instagram.com/reel/DPCEX3gETX7/',
-    embedUrl: 'https://www.instagram.com/reel/DPCEX3gETX7/embed',
+    postUrl: 'https://www.instagram.com/reel/DRVAh_2gdOx/?igsh=MWFqcm95bWRuMmt2dg==',
+    embedUrl: 'https://www.instagram.com/reel/DRVAh_2gdOx/embed',
     imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-1.jpg',
     fallbackImage: '/images/instagram-fallback-1.jpg',
     alt: 'Yummi Nuts Instagram Post 1'
   },
   {
     id: 'post2',
-    postUrl: 'https://www.instagram.com/reel/DPM7DcDEb1N/',
-    embedUrl: 'https://www.instagram.com/reel/DPM7DcDEb1N/embed',
+    postUrl: 'https://www.instagram.com/reel/DRNscpmCTgl/?igsh=ZHg4bzd5YTRoNXlu',
+    embedUrl: 'https://www.instagram.com/reel/DRNscpmCTgl/embed',
     imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-2.jpg',
     fallbackImage: '/images/instagram-fallback-2.jpg',
     alt: 'Yummi Nuts Instagram Post 2'
   },
   {
     id: 'post3',
-    postUrl: 'https://www.instagram.com/reel/DPP-dSREWWZ/',
-    embedUrl: 'https://www.instagram.com/reel/DPP-dSREWWZ/embed',
+    postUrl: 'https://www.instagram.com/reel/DQfRliVkRCM/?igsh=MTF0amw0cDc5djd3Mg==',
+    embedUrl: 'https://www.instagram.com/reel/DQfRliVkRCM/embed',
     imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-3.jpg',
     fallbackImage: '/images/instagram-fallback-3.jpg',
     alt: 'Yummi Nuts Instagram Post 3'
   },
   {
     id: 'post4',
-    postUrl: 'https://www.instagram.com/reel/DPQAa8PDZyh/',
-    embedUrl: 'https://www.instagram.com/reel/DPQAa8PDZyh/embed',
+    postUrl: 'https://www.instagram.com/reel/DQcs9f6iXdF/?igsh=ZjYwMHlnNm9ndDNj',
+    embedUrl: 'https://www.instagram.com/reel/DQcs9f6iXdF/embed',
     imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-4.jpg',
     fallbackImage: '/images/instagram-fallback-4.jpg',
     alt: 'Yummi Nuts Instagram Post 4'
@@ -60,7 +60,7 @@ const instagramPosts = [
   <div class="grid grid-cols-2 md:grid-cols-4 gap-6 md:gap-8 w-full">
     <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
       <iframe
-        src="https://www.instagram.com/reel/DPCEX3gETX7/embed"
+        src="https://www.instagram.com/reel/DRVAh_2gdOx/embed"
         class="w-full h-full"
         allowtransparency="true"
         allowfullscreen
@@ -70,7 +70,7 @@ const instagramPosts = [
     </div>
     <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
       <iframe
-        src="https://www.instagram.com/reel/DPM7DcDEb1N//embed"
+        src="https://www.instagram.com/reel/DRNscpmCTgl/embed"
         class="w-full h-full"
         allowtransparency="true"
         allowfullscreen
@@ -80,7 +80,7 @@ const instagramPosts = [
     </div>
     <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
       <iframe
-        src="https://www.instagram.com/reel/DPP-dSREWWZ/embed"
+        src="https://www.instagram.com/reel/DQfRliVkRCM/embed"
         class="w-full h-full"
         allowtransparency="true"
         allowfullscreen
@@ -90,7 +90,7 @@ const instagramPosts = [
     </div>
     <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
       <iframe
-        src="https://www.instagram.com/reel/DPQAa8PDZyh/embed"
+        src="https://www.instagram.com/reel/DQcs9f6iXdF/embed"
         class="w-full h-full"
         allowtransparency="true"
         allowfullscreen
