--- a/src/components/i18n/LanguageSwitcher.astro
+++ b/src/components/i18n/LanguageSwitcher.astro
@@ -64,13 +64,13 @@ const hoverTextColor = headerColorConfig?.hoverTextColor || 'hover:text-yellow-3
 <div class="font-title language-switcher flex flex-col md:flex-row items-center space-y-2 md:space-y-0 md:space-x-2 ">
   <div class="flex items-center space-x-2">
     {activeLocale === 'es' && (
- <a href={enUrl} class={`font-title language-link flex items-center ${activeLocale === 'es' ? `${textColor} ` : `${textColor} ${hoverTextColor}`}`} title="English" data-lang="en">
+ <a href={enUrl} data-astro-reload class={`font-title language-link flex items-center ${activeLocale === 'es' ? `${textColor} ` : `${textColor} ${hoverTextColor}`}`} title="English" data-lang="en">
       <span class={textColor}>EN</span>
     </a>
     )}
     {activeLocale === 'en' && (
 
-   <a href={esUrl} class={`language-link flex items-center ${activeLocale === 'en' ? `${textColor} ` : `${textColor} ${hoverTextColor}`}`} title="Español" data-lang="es">
+   <a href={esUrl} data-astro-reload class={`language-link flex items-center ${activeLocale === 'en' ? `${textColor} ` : `${textColor} ${hoverTextColor}`}`} title="Español" data-lang="es">
     
      <span class={textColor}>ES</span>
    </a>
